<resources>
    <string name="AJ">Card is not active</string>
    <string name="BottomSheetErrorType1SubTitle">Subtext here Subtext here....Subtext here.... Subte xt here....Subtext here....</string>
    <string name="BottomSheetErrorType1Title">Title</string>
    <string name="BottomSheetErrorType1btn1">Text here</string>
    <string name="BottomSheetErrorType1btn2">Text here</string>
    <string name="BottomSheetErrorType2SubTitle">Subtext here Subtext here....Subtext here.... Subte xt here....Subtext here....</string>
    <string name="BottomSheetErrorType2Title">Title</string>
    <string name="BottomSheetErrorType2btn1">Text here</string>
    <string name="BottomSheetErrorType2btn2">Text here</string>
    <string name="BottomSheetPermissionSubTitle">We need camera permission to continue with QR payments</string>
    <string name="BottomSheetPermissionTitle">Permission required</string>
    <string name="BottomSheetPermissionbtn">Allow permission</string>
    <string name="BottomSheetUPILinkBtn">Link now</string>
    <string name="BottomSheetUPILinkSubTitle">Link your UPI number 9731636518 &amp; device all your payments on BharatPe app</string>
    <string name="BottomSheetUPILinkTitle">Make BharatPe as default payment app</string>
    <string name="SP">Invalid/Incorrect ATM PIN</string>
    <string name="U76">UPI PIN Registration format not supported by the issuer bank</string>
    <string name="URL_error">URL is invalid</string>
    <string name="_continue">Continue</string>
    <string name="a_small_step_for_big_security_get_covered_instantly">A small step for big security—get covered instantly</string>
    <string name="aadhaar_otp_info_2">AADHAAR-OTP will be auto read.</string>
    <string name="aadhaar_otp_limit_info">AADHAAR-OTP Limit Exceeded</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Accept</string>
    <string name="accept_payments">Accept Payments</string>
    <string name="account">account…</string>
    <string name="action_hide">HIDE</string>
    <string name="action_resend">RESEND OTP</string>
    <string name="action_resend_aadhaar_otp">RESEND AADHAAR-OTP</string>
    <string name="action_resend_bank_otp">RESEND BANK-OTP</string>
    <string name="action_show">SHOW</string>
    <string name="activate_bharatpe_shield">Activate BharatPe Shield</string>
    <string name="add_note">Add Note</string>
    <string name="aggrement_text">I agree to terms-privacy policy and allow access to my credit bureau information.</string>
    <string name="align_the_code_in_the_box">Align QR code in the box</string>
    <string name="allow">Allow</string>
    <string name="already_on_postpe">Already On postpe</string>
    <string name="and">and</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anydesk">AnyDesk</string>
    <string name="anydesk_security_alert">"Remove AnyDesk app from your phone to access postpe.

Apps like AnyDesk are used by fraudsters to log in to your account and steal your money."</string>
    <string name="app_downloading_msg">App downloading %d %%</string>
    <string name="app_install_failed">App Install Failed</string>
    <string name="app_install_unknown">App Install Unknown</string>
    <string name="app_installing">App Installing</string>
    <string name="app_name">BharatPe</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asset_aar_version">1.0.10</string>
    <string name="asset_aar_version_postpe">1.0.10</string>
    <string name="avilable_balance">available balance</string>
    <string name="back_button_exit_message">Please Hit BACK Button Again To Exit</string>
    <string name="back_online">Back online</string>
    <string name="balance_fail">UPI lite balance fetch failed</string>
    <string name="bank_error">Unable to connect with bank.Please try again</string>
    <string name="bank_otp_info_2">BANK-OTP will be auto read.</string>
    <string name="bank_otp_limit_info">BANK-OTP Limit Exceeded</string>
    <string name="beckn_version">1.0rc1</string>
    <string name="beta_assets">false</string>
    <string name="bharatpe_shield">BharatPe Shield</string>
    <string name="bharatpe_shield_sec_text">Now all your future UPI transactions are protected by BharatPe Shield</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="build_version">20</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cameraview_default_autofocus_marker">com.otaliastudios.cameraview.markers.DefaultAutoFocusMarker</string>
    <string name="cameraview_filter_autofix">com.otaliastudios.cameraview.filters.AutoFixFilter</string>
    <string name="cameraview_filter_black_and_white">com.otaliastudios.cameraview.filters.BlackAndWhiteFilter</string>
    <string name="cameraview_filter_brightness">com.otaliastudios.cameraview.filters.BrightnessFilter</string>
    <string name="cameraview_filter_contrast">com.otaliastudios.cameraview.filters.ContrastFilter</string>
    <string name="cameraview_filter_cross_process">com.otaliastudios.cameraview.filters.CrossProcessFilter</string>
    <string name="cameraview_filter_documentary">com.otaliastudios.cameraview.filters.DocumentaryFilter</string>
    <string name="cameraview_filter_duotone">com.otaliastudios.cameraview.filters.DuotoneFilter</string>
    <string name="cameraview_filter_fill_light">com.otaliastudios.cameraview.filters.FillLightFilter</string>
    <string name="cameraview_filter_gamma">com.otaliastudios.cameraview.filters.GammaFilter</string>
    <string name="cameraview_filter_grain">com.otaliastudios.cameraview.filters.GrainFilter</string>
    <string name="cameraview_filter_grayscale">com.otaliastudios.cameraview.filters.GrayscaleFilter</string>
    <string name="cameraview_filter_hue">com.otaliastudios.cameraview.filters.HueFilter</string>
    <string name="cameraview_filter_invert_colors">com.otaliastudios.cameraview.filters.InvertColorsFilter</string>
    <string name="cameraview_filter_lomoish">com.otaliastudios.cameraview.filters.LomoishFilter</string>
    <string name="cameraview_filter_none">com.otaliastudios.cameraview.filter.NoFilter</string>
    <string name="cameraview_filter_posterize">com.otaliastudios.cameraview.filters.PosterizeFilter</string>
    <string name="cameraview_filter_saturation">com.otaliastudios.cameraview.filters.SaturationFilter</string>
    <string name="cameraview_filter_sepia">com.otaliastudios.cameraview.filters.SepiaFilter</string>
    <string name="cameraview_filter_sharpness">com.otaliastudios.cameraview.filters.SharpnessFilter</string>
    <string name="cameraview_filter_temperature">com.otaliastudios.cameraview.filters.TemperatureFilter</string>
    <string name="cameraview_filter_tint">com.otaliastudios.cameraview.filters.TintFilter</string>
    <string name="cameraview_filter_vignette">com.otaliastudios.cameraview.filters.VignetteFilter</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_message">Are you sure you want to cancel?</string>
    <string name="cancel_text">CANCEL</string>
    <string name="card">card</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_backspace">⌫</string>
    <string name="key_dot">.</string>
    <string name="loader_screen">loader screen</string>
    <string name="nfc_card_detail">(This feature can be used only with your contactless debit/credit card. To check, look for the wi-fi symbol on your card )</string>
    <string name="nfc_instructions">Place the back of your device against card/NFC Reader</string>
    <string name="nfc_status">Tap Your Card!</string>
    <string name="open">Open</string>
    <string name="otp_sent_to_your_mobile_number">Sent to your mobile number</string>
    <string name="resend_otp_question">⟳Resend OTP ?</string>
    <string name="scan_and_pay">Scan &amp; Pay</string>
    <string name="security_alert">Security Alert!</string>
    <string name="set_screen_lock">set screen lock</string>
    <string name="settings">SETTINGS</string>
    <string name="total_used_balance">total used balance</string>
    <string name="uninstall_anydesk_proceed_further">Uninstall Anydesk &amp; Proceed</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="whatsup_popup_OTPviaSMS">send OTP via SMS</string>
    <string name="whatsup_popup_OTPviaWhastapp">send OTP on WhatsApp</string>
    <string name="whatsup_popup_continue">Continue</string>
    <string name="whatsup_popup_receiveOtp">select any method to receive OTP</string>
    <string name="whatsup_popup_resendOtp">resend OTP</string>
    <string name="with_pin_pattern_password_face_fingerprint">with PIN / Pattern / Password / Face / Fingerprint</string>
    <string name="wrong_otp">Wrong OTP</string>
</resources>