<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background_whatsapp_confirmation" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/black" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whatsup_popup_resendOtp" android:fontFamily="@font/poppins_medium" />
    <TextView android:textSize="13.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/whatsup_popup_receiveOtp" android:fontFamily="@font/poppins_light" />
    <RadioGroup android:id="@id/radioGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip">
        <RadioButton android:textSize="15.0sp" android:id="@id/radioSMS" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/whatsup_popup_OTPviaSMS" android:fontFamily="@font/poppins_regular" android:buttonTint="@color/textColorGrey" />
        <RadioButton android:textSize="15.0sp" android:id="@id/radioWhatsApp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="false" android:text="@string/whatsup_popup_OTPviaWhastapp" android:fontFamily="@font/poppins_regular" android:buttonTint="@color/textColorGrey" />
    </RadioGroup>
    <Button android:id="@id/btnContinue" android:background="@drawable/btn_theme" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/whatsup_popup_continue" />
</LinearLayout>
