<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/nfcImage" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                <in.juspay.hypernfc.Wave android:id="@id/rippleView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <ImageView android:id="@id/backgroundImage" android:layout_width="280.0dip" android:layout_height="280.0dip" android:src="@drawable/jp_nfc_card" android:contentDescription="@string/loader_screen" android:paddingHorizontal="5.0dip" android:paddingVertical="1.0dip" />
                    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_horizontal" android:layout_gravity="center" android:id="@id/nfcStatus" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/nfc_status" android:paddingHorizontal="80.0dip" />
                    <TextView android:textSize="14.0sp" android:textColor="#b3ffffff" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/instructionText" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/nfc_instructions" android:paddingHorizontal="80.0dip" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <TextView android:textColor="#ffffffff" android:gravity="center" android:id="@id/nfcCardDetail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="50.0dip" android:text="@string/nfc_card_detail" android:paddingHorizontal="50.0dip" />
    </LinearLayout>
</RelativeLayout>
