<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/textSecurityAlert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/security_alert" android:textAllCaps="true" android:fontFamily="@font/poppins_bold" android:textAlignment="center" android:layout_marginHorizontal="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/anydeskImage" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="30.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textSecurityAlert" />
    <TextView android:textSize="18.0sp" android:textColor="@color/textColorPrimary" android:id="@id/textAnydesk" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/anydesk" android:fontFamily="@font/poppins_regular" android:textAlignment="center" android:layout_marginHorizontal="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/anydeskImage" />
    <TextView android:textSize="18.0sp" android:textColor="@color/textColor" android:id="@id/alertMessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/anydesk_security_alert" android:fontFamily="@font/poppins_regular" android:textAlignment="center" android:layout_marginHorizontal="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textAnydesk" />
    <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/btnGetStarted" android:background="@drawable/btn_theme" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginBottom="30.0dip" android:text="@string/uninstall_anydesk_proceed_further" android:textAllCaps="true" android:fontFamily="@font/poppins_bold" android:layout_marginHorizontal="20.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="?android:borderlessButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
