<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="@drawable/background_whatsapp_confirmation" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:layout_gravity="center_horizontal" android:background="@drawable/background_bar" android:layout_width="50.0dip" android:layout_height="5.0dip" android:layout_marginBottom="24.0dip" app:layout_constraintBottom_toTopOf="@id/title" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="22.0sp" android:textColor="@color/textColorPrimary" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/set_screen_lock" android:includeFontPadding="false" android:fontFamily="@font/poppins_medium" app:layout_constraintBottom_toTopOf="@id/description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="14.0sp" android:textColor="@color/black_1" android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="24.0dip" android:text="@string/with_pin_pattern_password_face_fingerprint" android:fontFamily="@font/poppins_light" app:layout_constraintBottom_toTopOf="@id/btnCancel" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <Button android:textSize="13.0sp" android:textColor="@color/white" android:id="@id/btnCancel" android:background="@drawable/btn_theme" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="44.0dip" android:layout_marginTop="24.0dip" android:text="@string/cancel_text" android:textAllCaps="true" android:fontFamily="@font/poppins_semibold" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btnSettings" app:layout_constraintStart_toStartOf="parent" style="?android:borderlessButtonStyle" />
    <Button android:textSize="13.0sp" android:textColor="@color/white" android:id="@id/btnSettings" android:background="@drawable/btn_theme" android:focusable="true" android:clickable="true" android:layout_width="0.0dip" android:layout_height="44.0dip" android:text="@string/settings" android:textAllCaps="true" android:fontFamily="@font/poppins_semibold" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btnCancel" style="?android:borderlessButtonStyle" />
</androidx.constraintlayout.widget.ConstraintLayout>
