<?xml version="1.0" encoding="utf-8"?>
<com.postpe.app.helperPackages.customviews.LoaderContainerView android:background="#fff2f5f9" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="20.0sp" android:textColor="@color/textColorPrimary" android:id="@id/enter_otp_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:text="@string/enter_otp" android:fontFamily="@font/lato_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="14.0sp" android:textColor="@color/textColorSecondary" android:id="@id/sent_mobile_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/otp_sent_to_your_mobile_number" android:fontFamily="@font/lato_regular" android:layout_marginHorizontal="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/enter_otp_title" />
        <TextView android:textSize="14.0sp" android:textColor="@color/text_color_grey" android:id="@id/tv_resend_otp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="35.0dip" android:text="@string/resend_otp_question" android:fontFamily="@font/lato_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pvOtp" />
        <com.postpe.app.helperPackages.customviews.PinView android:orientation="horizontal" android:id="@id/pvOtp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginHorizontal="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/sent_mobile_title" />
        <Button android:enabled="false" android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/btn_continue" android:background="@drawable/btn_theme" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginBottom="20.0dip" android:text="@string/verify_otp" android:textAllCaps="false" android:fontFamily="@font/lato_regular" android:layout_marginHorizontal="20.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.postpe.app.helperPackages.customviews.LoaderContainerView>
