<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center|top" android:orientation="vertical" android:id="@id/scan_widget_parent_ll" android:background="@drawable/bg_blue_widget" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip">
            <LinearLayout android:gravity="top" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="14.0sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/total_used_balance" android:fontFamily="@font/poppins_medium" />
                <TextView android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/used_balance_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:fontFamily="@font/poppins_bold" />
            </LinearLayout>
            <ImageView android:background="#00000000" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_round_postpe" android:contentDescription="@string/app_name" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/bg_white_widget" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:paddingHorizontal="8.0dip">
            <LinearLayout android:gravity="center|top" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:textColor="@color/textColorPrimary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/avilable_balance" android:fontFamily="@font/poppins_medium" />
                <TextView android:textSize="14.0sp" android:textColor="@color/textColorPrimary" android:gravity="end" android:id="@id/availble_balance_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:fontFamily="@font/poppins_bold" android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center|top" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                <Button android:textSize="14.0sp" android:textColor="@color/colorPrimary" android:id="@id/open_btn" android:background="@drawable/bg_widget_btn_secondary" android:padding="0.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:minWidth="0.0dip" android:minHeight="0.0dip" android:text="@string/open" android:layout_weight="1.0" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:textAllCaps="false" android:fontFamily="@font/poppins_bold" android:layout_marginEnd="4.0dip" />
                <Button android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/scanpe_btn" android:background="@drawable/bg_widget_btn_primary" android:padding="0.0dip" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/scan_and_pay" android:layout_weight="1.0" android:insetTop="0.0dip" android:insetBottom="0.0dip" android:textAllCaps="false" android:fontFamily="@font/poppins_bold" android:layout_marginStart="4.0dip" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
